--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,17 @@
 version: '2'
 services:
-  web:
+  ghost:
     restart: always
     image: ghost
     ports:
       - "2368:2368"
     volumes:
       - .:/var/lib/ghost
+  nginx:
+    image: nginx
+    volumes:
+      - ./nginx.conf:/etc/nginx/conf.d/blog.conf
+    ports:
+      - "8000:80"
+    links:
+      - "ghost"
