--- a/docker-compose-sample.yml
+++ b/docker-compose-sample.yml
@@ -14,12 +14,16 @@ services:
       - MYSQL_DATABASE=ghost
       - MYSQL_USER=ghost
       - "MYSQL_PASSWORD=ghost"
+      - MAIL_TRANSPORT=SMTP
+      - MAIL_SERVICE=Mailgun
+      - MAIL_USER=ghost
+      - "MAIL_PASSWORD=ghost"
   nginx:
     image: nginx:1.13.2-alpine
     volumes:
       - ./nginx.conf:/etc/nginx/conf.d/blog.conf
     ports:
-      - "8000:80"
+      - "80:80"
     links:
       - "ghost"
   mysql:
